--- a/db-app/angular.json
+++ b/db-app/angular.json
@@ -1,6 +1,6 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
-  "version": 1, 
+  "version": 1,
   "newProjectRoot": "projects",
   "projects": {
     "db-app": {
@@ -119,6 +119,10 @@
           }
         }
       }
-    }},
-  "defaultProject": "db-app"
+    }
+  },
+  "defaultProject": "db-app",
+  "cli": {
+    "analytics": "0310307b-6d2e-49aa-bcdf-9e4916ae78ec"
+  }
 }
