--- a/db-app/package.json
+++ b/db-app/package.json
@@ -28,8 +28,11 @@
     "body-parser": "^1.19.0",
     "crypto-js": "^4.0.0",
     "express": "^4.17.1",
+    "express-jwt": "^5.3.3",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.3",
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
@@ -54,7 +57,7 @@
     "typescript": "~3.7.5"
   },
   "browser": {
-    "crypto" : false,
-    "stream" : false
+    "crypto": false,
+    "stream": false
   }
 }
