--- a/db-app/package.json
+++ b/db-app/package.json
@@ -34,6 +34,7 @@
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
     "rxjs": "~6.5.4",
+    "rxjs-compat": "^6.5.5",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
   },
