--- a/db-app/package.json
+++ b/db-app/package.json
@@ -24,6 +24,7 @@
     "@angular/platform-browser": "~9.0.1",
     "@angular/platform-browser-dynamic": "~9.0.1",
     "@angular/router": "~9.0.1",
+    "@material/data-table": "^5.1.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "crypto-js": "^4.0.0",
