--- a/db-app/package.json
+++ b/db-app/package.json
@@ -27,6 +27,7 @@
     "@material/data-table": "^5.1.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
     "crypto-js": "^4.0.0",
     "express": "^4.17.1",
     "express-jwt": "^5.3.3",
