--- a/db-app/package.json
+++ b/db-app/package.json
@@ -28,6 +28,7 @@
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "crypto-js": "^4.0.0",
+    "cryptr": "^6.0.2",
     "express": "^4.17.1",
     "express-jwt": "^5.3.3",
     "jsonwebtoken": "^8.5.1",
